# Luma

./: Cargo.toml  PLAN.md  README.md  RESEARCH_RUST_XAML.md  WINUI_POC_BLOCKER.md  WINUI_POC_PLAN.md  XAML_ARCHITECTURE.md  XAML_IMPROVEMENTS.md  XAML_MARKUP_EXTENSIONS_PHASE3.md  XAML_PARSER_IMPLEMENTATION.md  XAML_PROJECT_STATUS.md  XAML_TYPE_SYSTEM_PHASE2.md  XAML_VS_WIN32_COMPARISON.md
crates/luma-core/: Cargo.toml
crates/luma-core/src/: error.rs  flags.rs  geometry.rs  handle.rs  ids.rs  lib.rs  traits.rs
crates/luma-core/src/layout/: box_layout.rs  constraints.rs  container.rs  mod.rs
crates/luma-gui/: Cargo.toml
crates/luma-gui/src/: application.rs  lib.rs  prelude.rs  window.rs
crates/luma-gui/src/widgets/: button.rs  checkbox.rs  label.rs  listbox.rs  mod.rs  textinput.rs
crates/luma-windows/: Cargo.toml
crates/luma-windows/src/: application.rs  button.rs  checkbox.rs  label.rs  lib.rs  listbox.rs  panel.rs  textinput.rs  utils.rs  window.rs
crates/luma-winui/: Cargo.toml  README.md
crates/luma-winui/src/: application.rs  error.rs  layout.rs  lib.rs  runtime.rs  utils.rs  window.rs
crates/luma-winui/src/widgets/: mod.rs
crates/luma-xaml/: Cargo.toml  README.md
crates/luma-xaml/examples/: basic_parsing.rs  winui3_parsing.rs
crates/luma-xaml/src/: context.rs  converters.rs  error.rs  flags.rs  lib.rs  parser.rs  reader.rs
crates/luma-xaml/src/dialects/: mod.rs
crates/luma-xaml/src/dialects/generic/: mod.rs
crates/luma-xaml/src/dialects/winui3/: base.rs  controls.rs  mod.rs  panels.rs  types.rs  windows.rs
crates/luma-xaml/src/dialects/wpf/: mod.rs
crates/luma-xaml/src/markup/: builtin.rs  extension.rs  mod.rs  parser.rs
crates/luma-xaml/src/model/: document.rs  element.rs  mod.rs
crates/luma-xaml/src/types/: mod.rs  property.rs  registry.rs  type_name.rs  xaml_type.rs
crates/luma-xaml/tests/: markup_extension_tests.rs  parser_tests.rs  type_system_tests.rs  value_converter_tests.rs
examples/: button_callback_test.rs  form_demo.rs  hello_window.rs  horizontal_layout_test.rs  layout_callback_test.rs  listbox_demo.rs
