[workspace]
resolver = "2"
members = [
    "crates/luma-core",
    "crates/luma-windows",
    "crates/luma-gui",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["cmmeu"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Error handling & serialization
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
bitflags = "2.4"
cfg-if = "1.0"
tracing = "0.1"
once_cell = "1.19"

# Internal workspace crates
luma-core = { path = "crates/luma-core", version = "0.0.1" }
luma-windows = { path = "crates/luma-windows", version = "0.0.1" }
luma-gui = { path = "crates/luma-gui", version = "0.0.1" }

[workspace.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]

# Root package for examples
[package]
name = "luma-examples"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
luma-gui.workspace = true

[[example]]
name = "hello_window"
path = "examples/hello_window.rs"
