[package]
name = "luma-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and layout engine for Luma GUI framework"

[dependencies]
thiserror.workspace = true
bitflags.workspace = true
tracing.workspace = true
