[package]
name = "luma-xaml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure Rust XAML parser supporting WinUI 3, WPF, and generic XAML"
repository = "https://github.com/cmmeu/Luma"
keywords = ["xaml", "parser", "winui", "wpf", "gui"]
categories = ["parsing", "gui"]

[dependencies]
# XML parsing
quick-xml = "0.31"

# Error handling
thiserror.workspace = true

# Utilities
once_cell.workspace = true
bitflags.workspace = true

[dev-dependencies]
# Testing utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["winui3"]
winui3 = []
wpf = []
generic = []
all-dialects = ["winui3", "wpf", "generic"]
